--- a/src/components/ModalAttention/ModalAttention.module.css
+++ b/src/components/ModalAttention/ModalAttention.module.css
@@ -5,7 +5,7 @@
     height: 25px;
     position: absolute;
     top: 0;
-    left: 124px;
+    left: 100px;
     cursor: pointer;
   }
 
@@ -18,26 +18,26 @@
   .attention-modal-overlay {
     position: fixed;
     top: 0;
-    left: auto;
-    right: 0;
-    bottom: 0;
+    left: 0;
     background-color: rgba(50, 48, 48, 0.75);
     width: 100vw;
     height: 100vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .attention-modal-content {
     position: absolute;
-    margin: 50% 20px;
-
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     padding: 20px 20px 40px 20px;
     border-radius: 30px;
-    width: 335px;
-    height: 394px;
+    width: 280px;
+    height: 360px;
     background: #fff;
   }
 }
@@ -87,6 +87,15 @@
 }
 
 @media (min-width: 768px) {
+  .close {
+    left: 186px;
+  }
+
+  .attention-modal-content {
+    width: 466px;
+    height: 434px;
+    padding: 20px 60px 60px 60px;
+  }
 }
 
 @media (min-width: 1280px) {
