--- a/src/components/NoticesItem/NoticesItem.module.css
+++ b/src/components/NoticesItem/NoticesItem.module.css
@@ -1,4 +1,160 @@
 @media (max-width: 374px) {
+  .card {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    border-radius: 16px;
+    padding: 20px 20px 20px 20px;
+    width: 280px;
+    height: auto;
+    background: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .notice-img {
+    border-radius: 16px;
+    width: 240px;
+    height: 170px;
+  }
+
+  .info-block {
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+  }
+
+  .title-and-list {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
+
+  .popularity {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 129%;
+    color: #2b2b2a;
+  }
+
+  .title {
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 125%;
+    color: #2b2b2a;
+
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+
+  .about-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .about-item {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .name {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 8px;
+    line-height: 140%;
+    letter-spacing: -0.02em;
+    color: rgba(38, 38, 38, 0.5);
+  }
+
+  .span {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 117%;
+    letter-spacing: -0.02em;
+    color: #262626;
+  }
+
+  .comment {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 129%;
+    letter-spacing: -0.02em;
+    color: #2b2b2a;
+  }
+
+  .bottom-card {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .price {
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 125%;
+    color: #2b2b2a;
+  }
+
+  .price-hidden {
+    visibility: hidden;
+    /* display: none; */
+  }
+
+  .btns-block {
+    display: flex;
+    gap: 10px;
+  }
+
+  .learn-more-btn {
+    border-radius: 30px;
+    padding: 14px 50px;
+    width: 185px;
+    height: 46px;
+    background: #f6b83d;
+
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #fff;
+  }
+
+  .learn-more-btn:hover {
+    background: #f9ca6c;
+    color: #fff;
+    transition: all 0.4s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .heart-btn {
+    border-radius: 30px;
+    padding: 14px;
+    width: 46px;
+    height: 46px;
+    background: #fff4df;
+  }
+
+  .heart-btn:hover {
+    transition: all 0.4s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .icon-heart {
+    color: #f6b83d;
+  }
+
+  .star {
+    width: 14px;
+    height: 14px;
+    color: #f6b83d;
+  }
 }
 
 @media (min-width: 375px) {
