--- a/src/components/NoticesList/NoticesList.module.css
+++ b/src/components/NoticesList/NoticesList.module.css
@@ -1,4 +1,12 @@
 @media (max-width: 374px) {
+  .notice-list {
+    margin: 40px 0 0 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+  }
 }
 
 @media (min-width: 375px) {
