--- a/src/pages/NoticesPage/NoticesPage.module.css
+++ b/src/pages/NoticesPage/NoticesPage.module.css
@@ -2,6 +2,81 @@
   .find-pet-section {
     margin: 40px 20px 88px 20px;
   }
+
+  /*========================MODAL ATTENTION STYLES============================================*/
+
+  .modal-img {
+    width: 70px;
+    height: 70px;
+  }
+
+  .modal-attention-title {
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 100%;
+    letter-spacing: -0.03em;
+    color: #f6b83d;
+  }
+
+  .modal-attention-text {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 129%;
+    letter-spacing: -0.02em;
+    text-align: center;
+    color: #2b2b2a;
+  }
+
+  .modal-btns-block {
+    display: flex;
+    gap: 6px;
+  }
+
+  .login-modal-btn {
+    border-radius: 30px;
+    padding: 12px 30px;
+    width: 115px;
+    height: 40px;
+    background: #f6b83d;
+
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #fff;
+  }
+
+  .login-modal-btn:hover {
+    transition-duration: 300ms;
+    transition-delay: 100ms;
+    background: #f9ca6c;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .register-modal-btn {
+    border-radius: 30px;
+    padding: 12px 20px;
+    width: 115px;
+    height: 40px;
+    background: #fff4df;
+
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 129%;
+    letter-spacing: -0.03em;
+    color: #f6b83d;
+  }
+
+  .register-modal-btn:hover {
+    transition-duration: 300ms;
+    transition-delay: 100ms;
+    background: #ffe8be;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
 }
 
 @media (min-width: 375px) {
